--- a/composer.json
+++ b/composer.json
@@ -1,70 +1,72 @@
 {
-	"name":              "dreamfactory/dfe-common",
-	"description":       "DreamFactory Enterprise(tm) Common Components",
-	"homepage":          "https://www.dreamfactory.com/",
-	"keywords":          [
-		"dreamfactory",
-		"fabric",
-		"utility",
-		"queue",
-		"common"
-	],
-	"license":           ["proprietary"],
-	"type":              "library",
-	"authors":           [
-		{
-			"name":  "Jerry Ablan",
-			"email": "jerryablan@dreamfactory.com"
-		}
-	],
-	"repositories":      [
-		{
-			"type": "vcs",
-			"url":  "git@github.com:dreamfactorysoftware/dfe-common.git"
-		},
-		{
-			"type": "vcs",
-			"url":  "git@github.com:dreamfactorysoftware/dfe-database.git"
-		},
-		{
-			"type": "vcs",
-			"url":  "git@github.com:dreamfactorysoftware/dfe-storage.git"
-		}
-	],
-	"minimum-stability": "dev",
-	"require":           {
-		"dreamfactory/php-utils":      "dev-develop as dev-master",
-		"wpb/string-blade-compiler":   "2.*@dev",
-		"league/flysystem-sftp":       "*",
-		"league/flysystem-ziparchive": "*"
-	},
-	"require-dev":       {
-		"phpunit/phpunit":             "~4.0",
-		"dreamfactory/dfe-database":   "dev-develop as dev-master",
-		"barryvdh/laravel-ide-helper": "~2.0",
-		"doctrine/dbal":               "~2.3",
-		"phpspec/phpspec":             "~2.1",
-		"way/generators":              "~3.0",
-		"laravel/framework":           "5.1.*",
-		"phpspec/phpspec":             "~2.1"
-	},
-	"autoload":          {
-		"psr-4": {
-			"DreamFactory\\Enterprise\\Common\\": "src/"
-		}
-	},
-	"autoload-dev":      {
-		"classmap": [
-			"tests/TestCase.php",
-			"tests/CommandTestCase.php"
-		]
-	},
-	"config":            {
-		"preferred-install": "dist"
-	},
-	"extra":             {
-		"branch-alias": {
-			"dev-develop": "0.1.x-dev"
-		}
-	}
+  "name":              "dreamfactory/dfe-common",
+  "description":       "DreamFactory Enterprise(tm) Common Components",
+  "homepage":          "https://www.dreamfactory.com/",
+  "keywords":          [
+    "dreamfactory",
+    "fabric",
+    "utility",
+    "queue",
+    "common"
+  ],
+  "license":           [
+    "proprietary"
+  ],
+  "type":              "library",
+  "authors":           [
+    {
+      "name":  "Jerry Ablan",
+      "email": "jerryablan@dreamfactory.com"
+    }
+  ],
+  "repositories":      [
+    {
+      "type": "vcs",
+      "url":  "git@github.com:dreamfactorysoftware/dfe-common.git"
+    },
+    {
+      "type": "vcs",
+      "url":  "git@github.com:dreamfactorysoftware/dfe-database.git"
+    },
+    {
+      "type": "vcs",
+      "url":  "git@github.com:dreamfactorysoftware/dfe-storage.git"
+    }
+  ],
+  "minimum-stability": "dev",
+  "require":           {
+    "dreamfactory/php-utils":      "dev-develop as dev-master",
+    "wpb/string-blade-compiler":   "2.*@dev",
+    "league/flysystem-sftp":       "*",
+    "league/flysystem-ziparchive": "*"
+  },
+  "require-dev":       {
+    "phpunit/phpunit":             "~4.0",
+    "dreamfactory/dfe-database":   "dev-develop as dev-master",
+    "barryvdh/laravel-ide-helper": "~2.0",
+    "doctrine/dbal":               "~2.3",
+    "phpspec/phpspec":             "~2.1",
+    "way/generators":              "~3.0",
+    "laravel/framework":           "5.1.*",
+    "phpspec/phpspec":             "~2.1"
+  },
+  "autoload":          {
+    "psr-4": {
+      "DreamFactory\\Enterprise\\Common\\": "src/"
+    }
+  },
+  "autoload-dev":      {
+    "classmap": [
+      "tests/TestCase.php",
+      "tests/CommandTestCase.php"
+    ]
+  },
+  "config":            {
+    "preferred-install": "dist"
+  },
+  "extra":             {
+    "branch-alias": {
+      "dev-develop": "0.1.x-dev"
+    }
+  }
 }
