--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .idea/composerJson.xml
 .idea/workspace.xml
 .idea/tasks.xml
+.idea/*.iml
 tests/data/storage/*
 tests/Services/sst-*
 composer.lock
