L52 changes to composer.json

--- a/composer.json
+++ b/composer.json
@@ -35,17 +35,15 @@
         "dreamfactory/php-utils":      "1.1.*",
         "wpb/string-blade-compiler":   "2.*@dev",
         "ruflin/elastica":             "*",
-        "league/flysystem-ziparchive": "*"
+        "league/flysystem-ziparchive": "~1.0"
     },
     "require-dev":       {
-        "dreamfactory/dfe-storage":    "dev-feature/l52-upgrade as master",
-        "dreamfactory/dfe-database":   "dev-feature/l52-upgrade as master",
-        "laravel/framework":    "5.2.*",
-        "symfony/dom-crawler":  "~3.0",
-        "symfony/css-selector": "~3.0",
-        "phpunit/phpunit":      "~4.0",
-        "way/generators":       "~3.0",
-        "phpspec/phpspec":      "~2.1"
+        "dreamfactory/dfe-storage":  "dev-feature/l52-upgrade as master",
+        "dreamfactory/dfe-database": "dev-feature/l52-upgrade as master",
+        "laravel/framework":         "5.2.*",
+        "phpunit/phpunit":           "~4.0",
+        "way/generators":            "~3.0",
+        "phpspec/phpspec":           "~2.1"
     },
     "autoload":          {
         "psr-4": {
