--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
             "url":  "https://github.com/dreamfactorysoftware/dfe-storage.git"
         }
     ],
-    "prefer-stable":     false,
+    "prefer-stable":     true,
     "minimum-stability": "dev",
     "require":           {
         "dreamfactory/php-utils":      "1.1.*",
