--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@
 /node_modules
 .env
 /storage
-.idea/composerJson.xml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/*.iml
+.idea/
 tests/data/storage/*
 tests/Services/sst-*
 composer.lock
